--- a/templates/rezult.html
+++ b/templates/rezult.html
@@ -1,33 +1,26 @@
-{%extends 'index.html'%}
-
-{%block saturs%}
-</div>
+{% extends 'index.html' %}
+{% block saturs %}
 <div class="col">
-
-
-    Te parādās rezultāti
+    <h3>Te parādās rezultāti</h3>
+    {% if rezultati %}
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Spēlētājs</th>
+                    <th>Punkti</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for ieraksts in rezultati %}
+                    <tr>
+                        <td>{{ ieraksts.name }}</td>
+                        <td>{{ ieraksts.score }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p>Nav neviena rezultāta.</p>
+    {% endif %}
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-{%endblock%}
+{% endblock %}
