--- a/templates/index.html
+++ b/templates/index.html
@@ -5,41 +5,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Latvia City Guesser</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
-
 </head>
 <body>
-  <!-- Navigācija jāsataisa -->
-   <!-- Šeit navigācija var nokopēt no to ko darija klase (kristers) -->
   <div class="container-fluid">
     <div class="row">
       <div class="col-2">
         <a href="/"><button class="btn btn-success">Spēle</button></a>
-        <a href="/rezult"><button class="btn btn-danger">Rezūltāti</button></a>
-     
+        <a href="/rezult"><button class="btn btn-danger">Rezultāti</button></a>
+      </div>
 
-    <!-- līdz šejienei -->
-      {% block saturs%}
+      {% block saturs %}
       <form method="post" action="/pievienot">
-
         <h3>Spēlētājs:</h3>
-        <input type="text" placeholder="lietotājvārds">
-        <h3>Rezultāts:
-        <div id="score">0</div></h3>
-        <input type="hidden" value="10" name="rezultats" id="rezult">
-        <input type="submit" value="Pievienot manu rezultātu!">
+        <input type="text" name="username" placeholder="lietotājvārds" required><br><br>
+
+        <h3>Rezultāts: <span id="score">0</span></h3>
+        <input type="hidden" name="rezultats" id="rezult" value="0">
+
+        <input type="submit" class="btn btn-primary" value="Pievienot manu rezultātu!">
       </form>
 
-    </div>
       <div class="col">
         <h1>Guess the Latvian City!</h1>
         <div id="map-container">
           <img src="{{url_for('static', filename='images/latvia-map.jpg')}}" id="latvia-map" alt="Latvia Map">
-          <div class="marker" data-city="Riga" style="top: 48%; left: 46%;"></div>
+          <div class="marker" data-city="Rīga" style="top: 48%; left: 46%;"></div>
           <div class="marker" data-city="Daugavpils" style="top: 92%; left: 69%;"></div>
-          <div class="marker" data-city="Liepaja" style="top: 65%; left: 17%;"></div>
+          <div class="marker" data-city="Liepāja" style="top: 65%; left: 17%;"></div>
           <div class="marker" data-city="Valmiera" style="top: 22%; left: 58%;"></div>
           <div class="marker" data-city="Jelgava" style="top: 60%; left: 42%;"></div>
         </div>
@@ -47,10 +42,39 @@
         <div id="result"></div>
         <button class="btn btn-info" onclick="nextQuestion()">Next City</button>
       </div>
-
       {% endblock %}
-      <script src="{{url_for('static', filename='script.js')}}"></script>
     </div>
   </div>
+
+<script>
+let score = 0;
+let currentCity = "";
+
+function nextQuestion() {
+    const cities = ["Rīga", "Daugavpils", "Liepāja", "Valmiera", "Jelgava"];
+    currentCity = cities[Math.floor(Math.random() * cities.length)];
+    document.getElementById("question").innerText = "Atrodi: " + currentCity;
+}
+
+document.addEventListener("DOMContentLoaded", function () {
+    nextQuestion();
+
+    document.querySelectorAll('.marker').forEach(marker => {
+        marker.addEventListener('click', function () {
+            const selectedCity = this.dataset.city;
+            if (selectedCity === currentCity) {
+                score += 1;
+                document.getElementById("score").innerText = score;
+                document.getElementById("rezult").value = score;
+                alert("Pareizi! Punkti: " + score);
+            } else {
+                alert("Nepareizi! Tā bija: " + currentCity);
+            }
+            nextQuestion();
+        });
+    });
+});
+</script>
+
 </body>
 </html>
