--- a/templates/rezult.html
+++ b/templates/rezult.html
@@ -1,26 +1,27 @@
 {% extends 'index.html' %}
 {% block saturs %}
 <div class="col">
-    <h3>Te parādās rezultāti</h3>
+    <h2>Rezultāti</h2>
     {% if rezultati %}
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Spēlētājs</th>
-                    <th>Punkti</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for ieraksts in rezultati %}
-                    <tr>
-                        <td>{{ ieraksts.name }}</td>
-                        <td>{{ ieraksts.score }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Lietotājvārds</th>
+                <th>Punkti</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for r in rezultati %}
+            <tr>
+                <td>{{ r.lietotajs }}</td>
+                <td>{{ r.punkti }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
     {% else %}
-        <p>Nav neviena rezultāta.</p>
+    <p>Nav neviena rezultāta vēl.</p>
     {% endif %}
 </div>
 {% endblock %}
+
