--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,12 @@
         <div id="map-container">
           <img src="{{url_for('static', filename='images/latvia-map.jpg')}}" id="latvia-map" alt="Latvia Map">
           <div class="marker" data-city="Rīga" style="top: 48%; left: 46%;"></div>
+          <div class="marker" data-city="Kolka" style="top: 15%; left: 31%;"></div>
+          <div class="marker" data-city="Ventspils" style="top: 26%; left: 23%;"></div>
           <div class="marker" data-city="Daugavpils" style="top: 92%; left: 69%;"></div>
           <div class="marker" data-city="Liepāja" style="top: 65%; left: 17%;"></div>
           <div class="marker" data-city="Valmiera" style="top: 22%; left: 58%;"></div>
+          <div class="marker" data-city="Alūksne" style="top: 25%; left: 74%;"></div>
           <div class="marker" data-city="Jelgava" style="top: 60%; left: 42%;"></div>
         </div>
         <div id="question"></div>
@@ -51,7 +54,7 @@ let score = 0;
 let currentCity = "";
 
 function nextQuestion() {
-    const cities = ["Rīga", "Daugavpils", "Liepāja", "Valmiera", "Jelgava"];
+    const cities = ["Rīga", "Daugavpils", "Liepāja", "Valmiera", "Jelgava", "Alūksne","Kolka","Ventspils"];
     currentCity = cities[Math.floor(Math.random() * cities.length)];
     document.getElementById("question").innerText = "Atrodi: " + currentCity;
 }
