--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Guess the Latvian City!</title>
 
-  <!-- Bootstrap stili no CDN -->
+  <!-- Bootstrap stili -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Pielāgotais stils (style.css) -->
+  <!-- Pielāgotais stils  -->
   <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
 </head>
 <body>
@@ -44,7 +44,7 @@
           <!-- Kartes attēls -->
           <img src="{{url_for('static', filename='images/latvia-map.jpg')}}" id="latvia-map" alt="Latvia Map">
 
-          <!-- Marķieri (katram ir data-city atribūts, ko JS izmanto) -->
+          <!-- Marķieri  -->
           <div class="marker" data-city="Rīga" style="top: 48%; left: 46%;"></div>
           <div class="marker" data-city="Kolka" style="top: 15%; left: 31%;"></div>
           <div class="marker" data-city="Ventspils" style="top: 26%; left: 23%;"></div>
